appId: com.ducatprotocol.DucatProtocolWallet
---
- tapOn:
    id: "lock-keypad-1"
- waitForAnimationToEnd
- tapOn:
    id: "lock-keypad-1"
- waitForAnimationToEnd
- tapOn:
    id: "lock-keypad-1"
- waitForAnimationToEnd
- tapOn:
    id: "lock-keypad-1"
- waitForAnimationToEnd
- tapOn:
    id: "lock-keypad-1"
- waitForAnimationToEnd
- tapOn:
    id: "lock-keypad-1"
- waitForAnimationToEnd
