appId: com.ducatprotocol.DucatProtocolWallet
---
- extendedWaitUntil:
    visible:
      id: "pin-keypad-1"
    timeout: 10000
- tapOn:
    id: "pin-keypad-1"
- waitForAnimationToEnd
- tapOn:
    id: "pin-keypad-1"
- waitForAnimationToEnd
- tapOn:
    id: "pin-keypad-1"
- waitForAnimationToEnd
- tapOn:
    id: "pin-keypad-1"
- waitForAnimationToEnd
- tapOn:
    id: "pin-keypad-1"
- waitForAnimationToEnd
- tapOn:
    id: "pin-keypad-1"
- waitForAnimationToEnd

- runFlow:
    when:
      visible:
        id: "lock-keypad-1"
    commands:
      - tapOn:
          id: "lock-keypad-1"
      - waitForAnimationToEnd
      - tapOn:
          id: "lock-keypad-1"
      - waitForAnimationToEnd
      - tapOn:
          id: "lock-keypad-1"
      - waitForAnimationToEnd
      - tapOn:
          id: "lock-keypad-1"
      - waitForAnimationToEnd
      - tapOn:
          id: "lock-keypad-1"
      - waitForAnimationToEnd
      - tapOn:
          id: "lock-keypad-1"
      - waitForAnimationToEnd
